# aoc

./: .gitignore  README.md
2021/day01/: part1.c  part2.c
2021/day02/: part2.c
2021/day04/: part1.c  part2.c
2021/day06/: part1.c  part2.c
2021/day07/: part1.c  part2.c
2021/day08/: part2-multithread.c
2021/day10/: part1.c  part2.c
2021/day11/: part1.c  part2.c
2021/day12/: part1.c  part2.c
2021/day13/: part1.c  part2.c
2021/day14/: part1.c  part2.c
2021/day2/: part1.c  part2.c
2021/day3/: part1.c  part2.c
2021/day5/: part1.c  part2.c
2021/day7/: part2.c
2021/day8/: part1.c  part2.c
2021/day9/: part1.c  part2.c
2022/day01/: part1.pas  part2.pas
2022/day02/: part1.pas  part2.pas
2022/day03/: part1.pas  part2.pas
2022/day04/: part1.pas  part2.pas
2022/day05/: part1.pas  part2.pas
2022/day06/: part1.pas  part2.pas
2022/day07/: part1.py  part2.py
2022/day08/: part1.pas  part2.pas
2022/day09/: part1.py  part2.py
2022/day10/: part1.py  part2.py
2022/day11/: Cargo.toml
2022/day12/: part1.py  (+1 more)
2023/: Cargo.toml  template.rs  template.toml  today.sh
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs
2024/: .gitignore  Cargo.toml  flake.nix  template.rs
2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
2025/: .gitignore  Cargo.toml  flake.nix  today.sh
2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs
(+10 files in other folders)
