[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 2
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
regex = "1.10.2"
[[bin]]
name = "day01"
path = "src/day01.rs"
[[bin]]
name = "day02"
path = "src/day02.rs"
[[bin]]
name = "day03"
path = "src/day03.rs"
[[bin]]
name = "day04"
path = "src/day04.rs"
