[package]
name = "aoc-2024"
edition = "2021"
version = "0.1.0"

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"


[[bin]]
name = "day01"
path = "src/day01.rs"
[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"
[[bin]]
name = "day04"
path = "src/day04.rs"
[[bin]]
name = "day05"
path = "src/day05.rs"
