[package]
name = "aoc-2025"
edition = "2024"
version = "0.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
itertools = "0.13.0"
num = "0.4.3"
rayon = "1.10.0"
regex = "1.11.1"


[[bin]]
name = "day01"
path = "src/day01.rs"
[[bin]]
name = "day02"
path = "src/day02.rs"
